# APEX

./: .gitignore  AGENTS.md  ARCHITECTURE_APEX.md  CHANGELOG.md  CODE_QUALITY_REVIEW.md  Dockerfile.router  IMPLEMENTATION_PLAN_CODE_QUALITY.md  LICENSE  PR_BODY_STREAMING.md  README.md  README_ARCHITECTURE_TEMPLATE.md  apex.bat  deploy.sh  docker-compose.prod.yml  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pr_body.md  start_router_docker.ps1
.chorus/: config.json
ci/: run_security_gates.sh
core/: Cargo.toml  run-with-llm.bat  test_output.txt
core/memory/: Cargo.toml
core/memory/examples/: simple.rs
core/memory/migrations/: 001_initial.sql  002_kanban_fields.sql  003_ttl_config.sql  004_integer_timestamps.sql  005_skill_versions.sql  006_channels_journal.sql  007_currency_cents.sql  008_remove_usd_columns.sql  009_timestamp_integer.sql  010_channel_adapters.sql  011_workflows.sql  012_composite_indexes.sql  013_enhanced_memory.sql  014_skill_security.sql  015_control_ui.sql  016_fast_mode_providers.sql  017_subagent_control.sql  018_pdf_tool.sql  019_multimodal_memory.sql  020_messaging_channels.sql  021_secrets_expansion.sql  022_slack_blocks.sql  023_execution_patterns.sql  024_performance_indexes.sql
core/memory/src/: audit.rs  background_indexer.rs  channel_repo.rs  channel_settings_repo.rs  chunker.rs  config_repo.rs  consolidated.rs  dashboard_repo.rs  db.rs  decision_journal.rs  embedder.rs  execution_pattern_repo.rs  hybrid_search.rs  lib.rs  msg_repo.rs  multimodal_repo.rs  narrative.rs  pdf_repo.rs  preferences.rs  provider_repo.rs  secrets_repo.rs  session_control_repo.rs  skill_registry.rs  slack_block_repo.rs  sqlite_vec.rs  task_repo.rs  tasks.rs  ttl_cleanup.rs  vector_store.rs  workflow_repo.rs  working_memory.rs
core/router/: Cargo.toml
core/router/benches/: performance.rs
core/router/migrations/: 016_mcp_registries.sql
core/router/src/: agent_loop.rs  api.rs  auth.rs  circuit_breaker.rs  classifier.rs  client_auth.rs  component_registry.rs  computer_use_api.rs  computer_use_api_tests.rs  computer_use_embedding_integration.rs  computer_use_hands_api.rs  config.rs  context_scope.rs  continuity.rs  cost_estimator.rs  curriculum.rs  db_manager.rs  deep_task_worker.rs  dynamic_tools.rs  enhanced_rate_limiter.rs  execution_stream.rs  governance.rs  hub_client.rs  lib.rs  llama.rs  main.rs  memory_consolidator.rs  memory_stores.rs  message_bus.rs  metrics.rs  narrative.rs  nats_integration.rs  notification.rs  persona.rs  privacy_guard.rs  rate_limiter.rs  response_cache.rs  secret_store.rs  session_search.rs  skill_hot_reload.rs  (+24 more)
core/router/src/api/: adapters.rs  audit.rs  bounded_memory.rs  channels.rs  channels_extended.rs  context_scope_api.rs  continuity_api.rs  dashboard.rs  dynamic_tools.rs  execution_patterns.rs  heartbeat.rs  hub_api.rs  journal.rs  llms.rs  mcp.rs  mcp_validate.rs  memory.rs  memory_ttl_api.rs  mod.rs  moltbook.rs  notifications.rs  pdf.rs  persona_api.rs  privacy_api.rs  secrets.rs  security.rs  session_search_api.rs  sessions.rs  settings.rs  signing_api.rs  skill_manager_api.rs  skills.rs  slack_blocks.rs  soul.rs  story_api.rs  subagent.rs  system.rs  tasks.rs  tool_validation.rs  totp.rs  (+3 more)
core/router/src/computer_use/: actions.rs  memory_placeholder_integration.rs  mod.rs  orchestrator.rs  orchestrator_tests.rs  orchestrator_v2.rs  screenshot.rs  vlm.rs
core/router/src/heartbeat/: mod.rs  scheduler.rs
core/router/src/mcp/: client.rs  client_test.rs  e2e_test.rs  mod.rs  registry.rs  server.rs  types.rs  validation.rs
core/router/src/moltbook/: client.rs  config.rs  mod.rs
core/router/src/repository/: mod.rs  task.rs
core/router/src/security/: anomaly_detector.rs  content_hash.rs  injection_classifier.rs  mod.rs  replay_protection.rs  validators.rs
core/router/src/soul/: constitution.rs  enforcer.rs  loader.rs  mod.rs
core/router/tests/: auth_integration.rs  e2e.rs  integration.rs  memory_integration.rs  memory_integration_phase5.rs  registry_db_tests.rs  security_integration.rs  skills_integration.rs  streaming_integration.rs  streaming_tinysse_tests.rs  telemetry_integration.rs  validation_tests.rs
core/security/: Cargo.toml  audit.rs  capability_gates.rs  capability_gates_final.md  capability_gates_integration.md  final_refinements.md  final_security_refinements.md  hmac.rs  hmac_tests.rs  merkle.rs  merkle_integration.md  merkle_integration_testdata.md  mod.rs  prompt_injection_integration.md  prompt_injection_scanner_integration.md  prompt_scanner.rs  vm_sandbox.rs  vm_sandbox_final.md  vm_sandbox_integration.md
core/security/src/: capability.rs  encrypted_narrative.rs  lib.rs  secret_store.rs
docs/: AGENTZERO_FEATURES_PLAN.md  AGENTZERO_MIGRATION_PLAN.md  AGENTZERO_OPENCLAW_COMPARISON.md  AGENTZERO_THEME_PLAN.md  APEX-Architecture.md  APEX-Design.md  APEX_Architecture_Recommendations.md  APEX_GUI_Design_Specification.md  APEX_Memory_System_Spec_v2.md  APEX_PARITY_PLAN.md  APEX_Security_Implementation_Plan.md  APEX_SkillPool_Implementation (1).md  APEX_SkillPool_Implementation.md  APEX_Theme_System_v4.md  APEX_Theme_System_v5.md  (+151 more)
execution/: Dockerfile  README.md  pyproject.toml  vm_agent.py
execution/src/apex_agent/: __init__.py  curriculum.py  sandbox.py  tir.py  tool_gen.py
execution/src/apex_agent/tools/: __init__.py
execution/tests/: test_agent_config.py  test_enforcement.py  test_sandbox.py
(+244 files in other folders)
