[package]
name = "apex-memory"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "migrate", "chrono"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
hex = "0.4"
tracing = "0.1"
base64 = "0.22"
dirs = "5"
uuid = { version = "1", features = ["v4"] }
reqwest = { version = "0.12", features = ["json"] }
unicode-segmentation = "1.10"

rusqlite = { version = "0.32", features = ["load_extension"], optional = true }
sqlite-vec = { version = "0.1", optional = true }

[features]
default = []
vector-search = ["rusqlite", "sqlite-vec"]

[dev-dependencies]

[[example]]
name = "simple"
path = "examples/simple.rs"
