[package]
name = "apex-router"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
apex-memory = { path = "../memory" }
apex-security = { path = "../security" }
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["ws"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
thiserror = "1"
anyhow = "1"
ulid = "1"
# nats = "0.25"
# Enable when OpenSSL is properly configured
# nats = { version = "0.25", default-features = false, features = ["rustls"] }
chrono = { version = "0.4", features = ["serde"] }
regex = "1"
once_cell = "1"
dirs = "5"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
reqwest = { version = "0.12", features = ["json"] }
urlencoding = "2"
tower-http = { version = "0.5", features = ["cors", "trace"] }
futures = "0.3"
tokio-stream = "0.1"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
totp-rs = { version = "5", features = ["otpauth"] }
base32 = "0.5"
base64 = "0.22"
rand = "0.8"
tokio-tungstenite = "0.21"
futures-util = "0.3"
serde_yaml = "0.9"
lazy_static = "1.4"
nats = { version = "0.25", optional = true }

[dev-dependencies]
tower = "0.5"
http = "1"
hyper = "1"
reqwest = { version = "0.12", features = ["json"] }

[features]
default = []
nats = ["dep:nats"]
